...
        let logOutButton = UIButton.systemButton(with: UIImage(named: "exit")!,
                                                 target: self,
                                                 action: #selector(self.didTapLogOutButton))
        logOutButton.tintColor = UIColor(red: 0.961, green: 0.42, blue: 0.424, alpha: 1)
        logOutButton.translatesAutoresizingMaskIntoConstraints = false
        
        logOutButton.accessibilityIdentifier = "logout_button"
        
        return logOutButton
    }()
    
    private var profileImageServiceObserver: NSObjectProtocol?
    var profilePresenter: ProfileViewPresenterProtocol?
...
